various changes. ported gui to java.